--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,11 @@ h2 {
 }
 
 .text-white {
-    color: #fff !important;
+    color: #fff;
 }
 
 .text-gray {
-    color: #757575!important;
+    color: #757575;
 }
 
 .clear {
@@ -275,7 +275,7 @@ h2 {
 
 .place-item .place-img {
     background-color: #fff;
-    vertical-align: middle;
+    display: block;
 }
 
 .place-item .place-img:hover {
@@ -287,20 +287,23 @@ h2 {
     background-color: #fff;
 }
 
-.place-desc, 
-.place-time,
-.place-body .place-heading {
+.place-body p {
     margin: 15px 0;
 }
 
 
-.place-item .place-buy-btn {
+.place-time {
+    color:#757575;
+}
+
+.place-buy-btn {
     color: #fff;background-color: #000;
     text-decoration: none;
     padding: 8px 16px;
     margin-bottom: 16px;
     display: inline-block;
-    border-radius: 3px;
+    border: none;
+    font-size: 15px;
 }
 
 .place-item .place-buy-btn:hover {
@@ -313,7 +316,7 @@ h2 {
 
 }
 
-#modal {
+.modal {
     position: fixed;
     padding-top: 100px;
     left: 0;
@@ -321,17 +324,23 @@ h2 {
     width: 100%;
     height: 100%;
     background: rgba(0 ,0, 0,0.4);
-    }
+    display: none;
+}
 
-#modal .modal-container {
+.modal.open {
+    display: flex;
+}
+
+.modal .modal-container {
     position: relative;
     width: 900px;
+    max-width: calc(100% - 32px);
     background: #fff;
     margin: auto;
     padding: 0;
 }
 
-#modal .modal-header {
+.modal .modal-header {
     color: #fff;
     background-color: #009688;
     padding: 32px 16px;
@@ -348,6 +357,13 @@ h2 {
     top: 0;
     font-size: 13px;
     padding: 16px 14px;
+}
+
+
+.modal-close:hover {
+    color: #000;
+    background-color: #ccc;
+    cursor: pointer;
 }
 
 .modal-body {
@@ -372,6 +388,10 @@ h2 {
     margin: 16px 0;
     padding: 16px;
     border: none;
+}
+.modal-body .buy-tickets:hover {
+    opacity: .5;
+    cursor: pointer;
 }
 
 .modal-body .modal-help {
