--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ h2 {
     border: 1px solid #ccc;
 }
 
- .content-section .tickets-list {
+.tickets-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -242,7 +242,7 @@ h2 {
     border-bottom: 1px solid #ddd ;
 }
 
-.tickets-list .sold-out {
+.sold-out {
     display: inline-block;
     padding: 0 8px;
     margin-left: 16px;
@@ -250,7 +250,7 @@ h2 {
     background-color: #f44336;
 }
 
-.tickets-list .quantity {
+.quantity {
     float: right;
     background-color: #000;
     margin-right: 16px;
@@ -261,28 +261,28 @@ h2 {
 }
 
 /* Place */
-.content-section .places-list {
+.places-list {
     margin: 0 -16px;
     padding: 32px 8px;
 }
 
-.places-list .place-item {
+.place-item {
     float: left;
     width: calc(100% / 3);
     padding: 0 8px;
     margin-bottom: 16px;
 }
 
-.place-item .place-img {
+.place-img {
     background-color: #fff;
     display: block;
 }
 
-.place-item .place-img:hover {
+.place-img:hover {
     opacity: 0.6;
 }
 
-.place-item .place-body {
+.place-body {
     padding: 0.01em 16px;
     background-color: #fff;
 }
@@ -306,7 +306,7 @@ h2 {
     font-size: 15px;
 }
 
-.place-item .place-buy-btn:hover {
+.place-buy-btn:hover {
     color: #000;
     background-color: #ccc;
 }
@@ -317,30 +317,36 @@ h2 {
 }
 
 .modal {
-    position: fixed;
-    padding-top: 100px;
+    z-index: 3;
+    display: none;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0 ,0, 0,0.4);
-    display: none;
+    overflow: auto;
+    position: fixed;
+    padding-top: 100px;
+    background-color: rgba(0 ,0, 0, .4);
 }
 
 .modal.open {
-    display: flex;
+    display: block;
 }
 
-.modal .modal-container {
+.modal-container {
     position: relative;
     width: 900px;
     max-width: calc(100% - 32px);
-    background: #fff;
+    box-sizing: inherit;
     margin: auto;
     padding: 0;
+    outline: 0;
+    animation: animatetop 0.4s;
+    background-color: #fff;
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
 }
 
-.modal .modal-header {
+.modal-header {
     color: #fff;
     background-color: #009688;
     padding: 32px 16px;
@@ -359,7 +365,6 @@ h2 {
     padding: 16px 14px;
 }
 
-
 .modal-close:hover {
     color: #000;
     background-color: #ccc;
@@ -374,14 +379,14 @@ h2 {
     margin: 15px 0;
 }
 
-.modal-body .modal-input{
+.modal-input{
     border: 1px solid #ccc;
     padding: 8px;
     width: 100%;
     font-size: 15px;
 }
 
-.modal-body .buy-tickets {
+.buy-tickets {
     color: #fff;
     background-color: #009688;
     width: 100%;
@@ -389,16 +394,27 @@ h2 {
     padding: 16px;
     border: none;
 }
-.modal-body .buy-tickets:hover {
+ .buy-tickets:hover {
     opacity: .5;
     cursor: pointer;
 }
 
-.modal-body .modal-help {
+.modal-help {
     margin: 15px 0;
     text-align: right;
 }
 
 .modal-help a {
     color: #2196F3;
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1;
+    }
 }
