--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,7 +375,7 @@ li>a {
 #slider{
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: url('./assets/img/slider/slider1.jpg') top center / cover no-repeat;
     position: relative;
 }
 
@@ -543,3 +543,13 @@ li>a {
 }
 
 /* Emd Modal */
+
+/* Mobile */
+@media only screen and (max-width: 37.5em) {
+
+}
+/* Tablet */
+@media only screen and (min-width: 37.5em) {
+
+}
+/* PC */    
