--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,7 @@ li>a {
     text-decoration: none;
     text-align: center;
     font-size: 15px;
+    -webkit-appearance: none;
 }
 
 
@@ -396,7 +397,9 @@ li>a {
 
 #slider .text-description {
     font-size:15px;
+    font-weight: 400;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 /* End Slider */
 
@@ -557,6 +560,7 @@ li>a {
 }
 
 .nav__mobile {
+    display: none;
     position: absolute;
     top: 0px;
     left: 0;
@@ -626,6 +630,11 @@ li>a {
 
 /* Mobile & Tablet */
 @media only screen and (max-width: 64em) {
+    
+    .nav__mobile {
+        display: inline-block;
+    }
+
     #nav> li,
     .search-btn {
         display: none;
